# on-policy

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
src/: main.py  train_ppo.py  train_vpg.py
src/agent/: __init__.py  model.py  network.py
src/agent/ppo/: __init__.py  model.py
src/agent/vpg/: __init__.py  model.py  network.py
src/algorithm/: __init__.py  evaluator.py  trainer.py
src/algorithm/trainer/: __init__.py  base.py  ppo.py  vpg.py
src/config/: config.yaml  train_ppo.yaml  train_vpg.yaml
src/data/: __init__.py  rollout_buffer.py
src/environment/: __init__.py  environment.py
